yaml/mr-doc/mr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mr-ingress
  namespace: mr-doc
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mr-service
              port:
                number: 10086
